Remove sections from assessor details and identifiers
- remove PNC
- remove National insurance Number
- remove the office
- remove office address
- remove team name
- remove line manager
- remove office location/address
- remove office phone number

--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -374,7 +374,7 @@
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Local justice area:</th>
               <td class="govuk-table__cell not-known-on-form">Testvilleshite</td>
-              <td class="govuk-table__cell">Solicitor:</td>
+              <th class="govuk-table__cell">Solicitor:</td>
               <td class="govuk-table__cell not-known-on-form">Anna Turney</td>
             </tr>
             <tr class="govuk-table__row">
@@ -383,35 +383,15 @@
               <td class="govuk-table__cell"></td>
               <td class="govuk-table__cell"></td>
             </tr>
-          </tbody>
-        </table>
-        <table class="govuk-table">
-          <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Report Author:</th>
-              <td class="govuk-table__cell not-known-on-form" colspan="3">Celia Fate</td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">Grade:</th>
-              <td class="govuk-table__cell not-known-on-form">Probation Services Officer</td>
-              <td class="govuk-table__cell">Team:</td>
-              <td class="govuk-table__cell not-known-on-form">Testville Court Team</td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">Office Number:</th>
-              <td class="govuk-table__cell not-known-on-form">012345 567890</td>
-              <td class="govuk-table__cell">Team Email:</td>
-              <td class="govuk-table__cell not-known-on-form">testville-probation-court-admin@justic.co.uk</td>
-            </tr>
-            <tr class="govuk-table__row">
-              <th scope="row" class="govuk-table__header">Office location:</th>
-              <td class="govuk-table__cell not-known-on-form">Testvill Court Probation Office</td>
-              <td class="govuk-table__cell">Line Manager:</td>
-              <td class="govuk-table__cell not-known-on-form">David Taskmaster</td>
-            </tr>
-            <tr class="govuk-table__row">
+              <td class="govuk-table__cell not-known-on-form">Celia Fate</td>
               <th scope="row" class="govuk-table__header">Signature</th>
-              <td class="govuk-table__cell" colspan="3">{{data['assessor-signature']}}</td>
+              <td class="govuk-table__cell">{{data['assessor-signature']}}</td>
+            </tr>
+            <tr class="govuk-table__row">
+              <th class="govuk-table__cell">Team Email:</th>
+              <td class="govuk-table__cell not-known-on-form">testville-probation-court-admin@justic.co.uk</td>
             </tr>
           </tbody>
         </table>
