Fix typo and add in dummy content for a user's NAME

--- a/app/views/9/verification-report/download.html
+++ b/app/views/9/verification-report/download.html
@@ -373,7 +373,7 @@
           <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Local justice area:</th>
-              <td class="govuk-table__cell not-known-on-form">Testvilleshite</td>
+              <td class="govuk-table__cell not-known-on-form">Testvilleshire</td>
               <th class="govuk-table__cell">Solicitor:</td>
               <td class="govuk-table__cell not-known-on-form">Anna Turney</td>
             </tr>
@@ -385,7 +385,7 @@
             </tr>
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Report Author:</th>
-              <td class="govuk-table__cell not-known-on-form">Celia Fate</td>
+              <td class="govuk-table__cell">FULL NAME</td>
               <th scope="row" class="govuk-table__header">Signature</th>
               <td class="govuk-table__cell">{{data['assessor-signature']}}</td>
             </tr>
