Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,10 @@
       <p><a class="govuk-link" href="/9/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3525">
+            Update drop downs based on team and SME feedback.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3517">
             Verification report inputs link to the output doc. Populate parts
             of the report document with information users have provided.</a></p>
