Updates to proof of address
- question tied to confirming the current address is correct, to make it
  less likely that user think its about the DV/safeguarding checks
- added professional judgement option

--- a/app/views/9/verification-report/defendant-details.html
+++ b/app/views/9/verification-report/defendant-details.html
@@ -128,10 +128,7 @@
                 id: "address-verification",
                 name: "address-verification",
                 label: {
-                  text: "How have you checked this address?"
-                },
-                  hint: {
-                  text: "You can enter a proof of address once you have seen one."
+                  text: "How have confirmed the current address is correct?"
                 },
                 items: addressVerificationList
               }) }}
