--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -123,7 +123,7 @@
               id: "domestic-abuse-verification",
               name: "domestic-abuse-verification",
               label: {
-                text: "How have you verified this information?"
+                text: "How have you checked for previous domestic abuse charges?"
               },
               items: domesticAbuseVerificationList
             }) }}
@@ -164,7 +164,7 @@
               id: "safeguarding-verification",
               name: "safeguarding-verification",
               label: {
-                text: "How have you verified this information?"
+                text: "How have you checked for concerns about child safety?"
               },
               items: safeguardingVerificationList
             }) }}
@@ -252,10 +252,7 @@
               id: "dependants-caring-verification",
               name: "dependants-caring-verification",
               label: {
-                text: "How have you verified this information?"
-              },
-                hint: {
-                text: "Record proof of dependants and caring responsibilities."
+                text: "How have checked dependant and caring responsibilities"
               },
               items: dependantsCaringVerificationList
             }) }}
@@ -275,7 +272,7 @@
               id: "employment-verification",
               name: "employment-verification",
               label: {
-                text: "How have you verified this information?"
+                text: "How have you check employment status and working pattern?"
               },
               items: employmentVerificationList
             }) }}
@@ -296,10 +293,7 @@
               id: "health-conditions-verification",
               name: "health-conditions-verification",
               label: {
-                text: "How have you verified this information?"
-              },
-                hint: {
-                text: "Record proof health conditions."
+                text: "How have checked relevant health conditions?"
               },
               items: healthConditionsVerificationList
             }) }}
