Track work on index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,11 @@
       <p><a class="govuk-link" href="/9/verification-report/index.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3527">
+            Make it clear which text areas will be consumed by magistrates, so
+            probation can write words for them and the court.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3525">
             Update drop downs based on team and SME feedback.</a></p>
         </li>
