Add copy to highlight that this pages info will be on the report
- The same phrase is used on the offences and suitability decision pages

--- a/app/views/9/verification-report/offences.html
+++ b/app/views/9/verification-report/offences.html
@@ -70,6 +70,8 @@
           <h1 class="govuk-heading-l">
             Offences
           </h1>
+          <p class="govuk-body">This information will be included in the
+            verification report and shared with magistrates and the court.</p>
           <div class="govuk-form-group">
             <h2 class="govuk-label-wrapper">
               <label class="govuk-label govuk-label--m" for="offences">
