--- a/app/views/9/verification-report/suitability-decision.html
+++ b/app/views/9/verification-report/suitability-decision.html
@@ -70,8 +70,12 @@
           <h1 class="govuk-heading-l">
             Suitability decision
           </h1>
+          <p class="govuk-body">This information will be included in the
+            verification report and shared with magistrates and the court.</p>
           <div class="govuk-form-group">
-            <p class="govuk-body-l">Based on the information you have from agency checks and the defendant interview, what is the defendant suitable for?</p>
+            <h2 class="govuk-heading-m">Based on the information you have from
+              agency checks and the defendant interview, what is the defendant
+              suitable for?</h2>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="suitable-for" name="suitable-for" type="radio" value="Unpaid work only" {{ checked("suitable-for", "Unpaid work only") }}>
