Check answers handles all the offence information

--- a/app/views/9/verification-report/check-answers.html
+++ b/app/views/9/verification-report/check-answers.html
@@ -160,14 +160,29 @@
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Extra offence info
+                    Additional offence information
                   </dt>
                   <dd class="govuk-summary-list__value">
                     {{data['offence-1-information']}}
                   </dd>
                   <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="offences.html">Change
-                      <span class="govuk-visually-hidden">Offences</span>
+                      <span class="govuk-visually-hidden">additional offence
+                        information</span>
+                    </a>
+                  </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                  <dt class="govuk-summary-list__key">
+                    Act relating to offence
+                  </dt>
+                  <dd class="govuk-summary-list__value">
+                    {{data['offence-1-act']}}
+                  </dd>
+                  <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" href="offences.html">Change
+                      <span class="govuk-visually-hidden">act relating to
+                        offence</span>
                     </a>
                   </dd>
                 </div>
@@ -186,14 +201,29 @@
                 </div>
                 <div class="govuk-summary-list__row">
                   <dt class="govuk-summary-list__key">
-                    Extra offence 2 info
+                    Additional offence 2 information
                   </dt>
                   <dd class="govuk-summary-list__value">
                     {{data['offence-1-information']}}
                   </dd>
                   <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="offences.html">Change
-                      <span class="govuk-visually-hidden">Offences</span>
+                      <span class="govuk-visually-hidden">offence 2 additional
+                        information</span>
+                    </a>
+                  </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                  <dt class="govuk-summary-list__key">
+                    Act relating to offence 2
+                  </dt>
+                  <dd class="govuk-summary-list__value">
+                    {{data['offence-1-act']}}
+                  </dd>
+                  <dd class="govuk-summary-list__actions">
+                    <a class="govuk-link" href="offences.html">Change
+                      <span class="govuk-visually-hidden">act relating to
+                        offence 2</span>
                     </a>
                   </dd>
                 </div>
