Updated text to be more explicit about who would see a verfication report

--- a/app/views/9/verification-report/offences.html
+++ b/app/views/9/verification-report/offences.html
@@ -71,7 +71,7 @@
             Offences
           </h1>
           <p class="govuk-body">This information will be included in the
-            verification report and shared with magistrates and the court.</p>
+            verification report which will be visible to the court and judiciary.</p>
             <details class="govuk-details" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
