--- a/app/views/9/verification-report/suitability-decision.html
+++ b/app/views/9/verification-report/suitability-decision.html
@@ -71,7 +71,7 @@
             Suitability decision
           </h1>
           <p class="govuk-body">This information will be included in the
-            verification report and shared with magistrates and the court.</p>
+            verification report which will be visible to the court and judiciary.</p>
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m">Based on the information you have from
               agency checks and the defendant interview, what is the defendant
