Remove duplicate sentence that does the same thing but was not successful

--- a/app/views/9/verification-report/suitability-decision.html
+++ b/app/views/9/verification-report/suitability-decision.html
@@ -111,8 +111,7 @@
               </label>
             </h2>
             <div id="suitability-explanation-hint" class="govuk-hint">
-              This will be included in the final report which is presented to the Magistrate.
-              <br>You should include the things you have taken into consideration in making your decision.
+              You should include the things you have taken into consideration in making your decision.
               <br>Keep your explanation focussed on the checks you have done, and the things you found out at interview.
             </div>
             <textarea class="govuk-textarea" id="suitability-explanation" name="suitability-explanation" rows="9" aria-describedby="suitability-explanation-hint">{{data['suitability-explanation']}}</textarea>
