Tidy up details text

--- a/app/views/9/verification-report/offences.html
+++ b/app/views/9/verification-report/offences.html
@@ -81,7 +81,7 @@
               <div class="govuk-details__text">
                 <p class="govukl-body">
                   Offences that are not relevant to the hearing or report can be
-                  removed by deleting the information from the boxes below.
+                  removed by deleting the information from the relevant boxes.
                 </p>
                 <p class="govukl-body">
                   Add offences by recording them in NDelius, then reload this
