How confirmed address becomes h3

--- a/app/views/9/verification-report/defendant-details.html
+++ b/app/views/9/verification-report/defendant-details.html
@@ -128,7 +128,7 @@
                 id: "address-verification",
                 name: "address-verification",
                 label: {
-                  html: "<h3 class='govuk-heading-s'>How have confirmed the current address is correct?</h3>"
+                  html: "<h3 class='govuk-heading-s'>How have you confirmed the current address is correct?</h3>"
                 },
                 items: addressVerificationList
               }) }}
