--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -123,7 +123,7 @@
               id: "domestic-abuse-verification",
               name: "domestic-abuse-verification",
               label: {
-                text: "How have you checked for previous domestic abuse charges?"
+                html: "<h3 class='govuk-header-s'>How have you checked for previous domestic abuse charges?</h3>"
               },
               items: domesticAbuseVerificationList
             }) }}
@@ -164,7 +164,7 @@
               id: "safeguarding-verification",
               name: "safeguarding-verification",
               label: {
-                text: "How have you checked for concerns about child safety?"
+                html: "<h3 class='govuk-header-s'>How have you checked for concerns about child safety?</h3>"
               },
               items: safeguardingVerificationList
             }) }}
@@ -252,7 +252,7 @@
               id: "dependants-caring-verification",
               name: "dependants-caring-verification",
               label: {
-                text: "How have checked dependant and caring responsibilities"
+                html: "<h3 class='govuk-header-s'>How have checked dependant and caring responsibilities</h3>"
               },
               items: dependantsCaringVerificationList
             }) }}
@@ -272,7 +272,7 @@
               id: "employment-verification",
               name: "employment-verification",
               label: {
-                text: "How have you check employment status and working pattern?"
+                html: "<h3 class='govuk-header-s'>How have you check employment status and working pattern?</h3>"
               },
               items: employmentVerificationList
             }) }}
@@ -293,7 +293,7 @@
               id: "health-conditions-verification",
               name: "health-conditions-verification",
               label: {
-                text: "How have checked relevant health conditions?"
+                html: "<h3 class='govuk-header-s'>How have checked relevant health conditions?</h3>"
               },
               items: healthConditionsVerificationList
             }) }}
