--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -89,9 +89,8 @@
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                <h2 class="govuk-fieldset__heading">
-                  Are there any concerns about domestic abuse?
-                </h2>
+                <h2 class="govuk-fieldset__heading">Are there any concerns about
+                  domestic abuse?</h2>
               </legend>
               <div id="domestic-abuse-checks-hint" class="govuk-hint">You must
                 check for any previous domestic violence charges or domestic
