Improve words used on the how checked dependants and caring question

--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -240,7 +240,7 @@
             </h2>
             <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
               Record any dependants and caring responsibilities that could
-              impact the defendant's ability to do unpaid work or receive an
+              affect the defendant's ability to do unpaid work or receive an
               electronic monitoring curfew.
             </div>
             <textarea class="govuk-textarea" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" rows="2" aria-describedby="dependant-caring-responsibilities-hint">{{data['dependant-caring-responsibilities']}}</textarea>
@@ -250,7 +250,7 @@
               id: "dependants-caring-verification",
               name: "dependants-caring-verification",
               label: {
-                html: "<h3 class='govuk-header-s'>How have checked dependant and caring responsibilities</h3>"
+                html: "<h3 class='govuk-header-s'>How have you checked dependants and caring responsibilities?</h3>"
               },
               items: dependantsCaringVerificationList
             }) }}
