--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -240,8 +240,8 @@
             </h2>
             <div id="dependant-caring-responsibilities-hint" class="govuk-hint">
               Record any dependants and caring responsibilities that could
-              affect the defendant's ability to do unpaid work or receive an
-              electronic monitoring curfew.
+              affect the defendant's capacity for unpaid work or electronic
+              monitoring curfew.
             </div>
             <textarea class="govuk-textarea" id="dependant-caring-responsibilities" name="dependant-caring-responsibilities" rows="2" aria-describedby="dependant-caring-responsibilities-hint">{{data['dependant-caring-responsibilities']}}</textarea>
           </div>
