--- a/app/views/9/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/9/verification-report/electronic-monitoring-for-curfew.html
@@ -12,7 +12,7 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-underline" href="offence-information">
+              <a class="app-subnav__link govuk-link govuk-link--no-underline" href="offences">
                 Offences</a>
             </li>
             <li class="app-subnav__section-item">
