:speech_balloon: hint explicitly says carry on then return here later
Users were getting hung up on the fact that they had to to do checks and
some did not want to proceed without having the results. We added some
copy to say they could do the checks and return later but it did not
explicitly state that they could complete later sections of the report
then return to answer about the checks. It now does this.

--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -84,8 +84,8 @@
             Essential information
           </h1>
           <p class="govuk-body">You should request these checks from the
-            relevant agencies and record the results when you have them.<br/>
-            You can return to this section at any time.</p>
+            relevant agencies and record the results when you have them. You can
+            carry on with the report and return to this section at any time.</p>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
