Add in todo copy for how to add offences.
Marcin is checking this out with Tony

--- a/app/views/9/verification-report/offences.html
+++ b/app/views/9/verification-report/offences.html
@@ -84,8 +84,11 @@
                   removed by deleting the information from the relevant boxes.
                 </p>
                 <p class="govukl-body">
-                  Add offences by recording them in NDelius, then reload this
-                  page to view them.
+                  Add offences by recording them in Common Platform , then reload
+                  this page to view them or do something in Libra.<br>
+                  TODO<br>
+                  - check we can add offences in common Platform<br>
+                  - articualte if/how and offence can be added to Libra<br>
                 </p>
               </div>
             </details>
