Iterate drop down and question for checking benefits

--- a/app/views/9/verification-report/unpaid-work.html
+++ b/app/views/9/verification-report/unpaid-work.html
@@ -81,7 +81,7 @@
               id: "benefits-verification",
               name: "benefits-verification",
               label: {
-                text: "How have you verified this information?"
+                html: "<h3 class='govuk-header-s'>How have you checked their benefits?</h3>"
               },
               items: benefitsVerificationList
             }) }}
