--- a/app/views/9/verification-report/essential-information.html
+++ b/app/views/9/verification-report/essential-information.html
@@ -84,8 +84,10 @@
             Essential information
           </h1>
           <p class="govuk-body">You should request these checks from the
-            relevant agencies and record the results when you have them. You can
-            carry on with the report and return to this section at any time.</p>
+            relevant agencies and record the results when you have them. If checks
+            are still pending, record this then carry on with the report.</p>
+          <p class="govuk-body">Update this section once you have received the
+            results of the checks.</p>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
