--- a/app/views/10/verification-report/offences.html
+++ b/app/views/10/verification-report/offences.html
@@ -83,13 +83,6 @@
                   Offences that are not relevant to the hearing or report can be
                   removed by deleting the information from the relevant boxes.
                 </p>
-                <p class="govukl-body">
-                  Add offences by recording them in Common Platform , then reload
-                  this page to view them or do something in Libra.<br>
-                  TODO<br>
-                  - check we can add offences in common Platform<br>
-                  - articualte if/how and offence can be added to Libra<br>
-                </p>
               </div>
             </details>
           <div class="govuk-form-group">
@@ -108,7 +101,7 @@
               <h3 class="govuk-heading-s" for="offence-1-information">
                 Enter additional information about this offence, for example the value of stolen goods.
               </h3>
-              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="2" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023 at Kings Lynn unlawfully and intentionally, threatened another person namely Sarah Smith with an article to which section 139 of the Criminal Justice Act 1988 applies, namely a knife, in a private place, namely a flat, in such a awy that there was an immediate risk of serious physical harm to that person.')}}</textarea>
+              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="4" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023 at Kings Lynn unlawfully and intentionally, threatened another person namely Sarah Smith with an article to which section 139 of the Criminal Justice Act 1988 applies, namely a knife, in a private place, namely a flat, in such a way that there was an immediate risk of serious physical harm to that person.')}}</textarea>
             </div>
             <div class="govuk-form-group">
               <h3 class="govuk-heading-s" for="offence-1-act">
@@ -125,22 +118,22 @@
               </label>
             </h2>
             <div class="govuk-form-group">
-              <h3 class="govuk-heading-s" for="offence-2>
+              <h3 class="govuk-heading-s" for="offence-2-information">
                 Enter the name of the offence and the date it was committed.
               </h3>
-              <input class="govuk-input" id="offence-2" name="offence-2" type="text" value="{{data['offence-2'] | default('Theft from a shop 24/08/2023')}}">
+              <input class="govuk-input" id="offence-2-information" name="offence-2-information" type="text" value="{{data['offence-2-information'] | default('Affray')}}">
             </div>
             <div class="govuk-form-group">
-              <h3 class="govuk-heading-s" for="offence-2-information">
+              <h3 class="govuk-heading-s" for="offence-1-information">
                 Enter additional information about this offence, for example the value of stolen goods.
               </h3>
-              <textarea class="govuk-textarea" id="offence-2-information" name="offence-2-information" rows="2" aria-describedby="offences-hint">{{data['offence-2-information'] | default('About offence 2')}}</textarea>
+              <textarea class="govuk-textarea" id="offence-1-information" name="offence-1-information" rows="4" aria-describedby="offences-hint">{{data['offence-1-information'] | default('On 13/06/2023 at Kings Lynn when leaving the premises of another person, did they cause harm to that person, namely Sarah Smith, by pushing them away from the exit, causing them to fall into the wall and result in bruising.')}}</textarea>
             </div>
             <div class="govuk-form-group">
-              <h3 class="govuk-heading-s" for="offence-2-act">
+              <h3 class="govuk-heading-s" for="offence-1-act">
                 Act relating to offence
               </h3>
-              <input class="govuk-input" id="offence-2-act" name="offence-2-act" type="text" value="{{data['offence-2-act'] | default('OFFENCE 2 ACT')}}">
+              <input class="govuk-input" id="offence-1-act" name="offence-1-act" type="text" value="{{data['offence-1-act'] | default('Contrary to Public Order Act 1986, s.3')}}">
             </div>
           </div>
           <div class="govuk-button-group">
