Improve supporting comments content, remove hr after the h1

--- a/app/views/10/verification-report/unpaid-work.html
+++ b/app/views/10/verification-report/unpaid-work.html
@@ -68,7 +68,6 @@
         <form action="unpaid-work" method="post" novalidate>
           <span class="govuk-caption-l">Dylan Adam Armstrong CRN: E234516</span>
           <h1 class="govuk-heading-l">Suitability for unpaid work</h1>
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <h2 class="govuk-heading-m" for="verify-dwp-involvement">Benefits</h2>
             <div id="verify-dwp-involvement-hint" class="govuk-hint">
@@ -93,11 +92,10 @@
                 Supporting comments</label>
             </h1>
             <div id="more-detail-hint" class="govuk-hint">Include information
-              here that supports your professional judgement.<br/><br/>
-              You should include anything of concern that you have considered
-              and how it has affected your recommendation.<br/><br/>
-              This will not be published in the final report but it will be
-              recorded.</div>
+              here that supports your professional judgement. You should include
+              anything of concern and explain how it has affected your
+              recommendation. This will not be published in the final report but
+              it will be recorded.</div>
             <textarea class="govuk-textarea" id="supporting-information-unpaid-work" name="supporting-information-unpaid-work" rows="5" aria-describedby="more-detail-hint">{{data['supporting-information-unpaid-work']}}</textarea>
           </div>
           <div class="govuk-button-group">
